The search results are now displayed in a table. No pagination yet.

--- a/src/ElasticsearchRecipes/wwwroot/Views/Recipes.html
+++ b/src/ElasticsearchRecipes/wwwroot/Views/Recipes.html
@@ -1,9 +1,12 @@
 ﻿<div class="container text-center">
     <h1>Elasticsearch Recipes</h1>
 
-    <label>Enter your query</label>
+    <p>
+        Supported queries: wildcard (exampl*), must_not (-example), must (example)
+    </p>
+
     <input ng-model="model.query" type="text" class="input" />
-    <a ui-sref="recipes.search({ query: model.query })" class="btn btn-default">Search</a>
+    <a ui-sref="recipes.search({ query: model.query })" class="btn btn-default">Go</a>
 
     <div ui-view=""></div>
 </div>
