Added support for phrase matching. You can now surround in quotes the exact phrase you want to match (works with must_not by putting a - in front).Added an option to change the page size on the front-end.

--- a/src/ElasticsearchRecipes/wwwroot/Views/Recipes.html
+++ b/src/ElasticsearchRecipes/wwwroot/Views/Recipes.html
@@ -6,7 +6,18 @@
     </p>
 
     <input ng-model="model.query" type="text" class="input" />
-    <a ui-sref="recipes.search({ query: model.query })" class="btn btn-default">Go</a>
+    <a ui-sref="recipes.search({ query: model.query, pageSize: model.pageSize })" class="btn btn-default">Go</a>
+
+    <br />
+
+    <label>Page size</label>
+
+    <select ng-model="model.pageSize">
+        <option>10</option>
+        <option>20</option>
+        <option>50</option>
+        <option>100</option>
+    </select>
 
     <div ui-view=""></div>
 </div>
