--- a/src/ElasticsearchRecipes/wwwroot/Views/MoreLikeThis.html
+++ b/src/ElasticsearchRecipes/wwwroot/Views/MoreLikeThis.html
@@ -3,6 +3,8 @@
         Took: {{ model.searchData.elapsedMilliseconds }}ms, Page: {{ model.searchData.page }}, Results count: {{ model.searchData.total }}
     </div>
 
+    <h3>Recipes like {{ model.currentRecipeId }}</h3>
+
     <table class="table table-bordered">
         <thead>
             <tr>
