When you click 'More like this', the page shows a message 'Recipes like {{ recipe }}'

--- a/src/ElasticsearchRecipes/wwwroot/Views/SearchResult.html
+++ b/src/ElasticsearchRecipes/wwwroot/Views/SearchResult.html
@@ -25,7 +25,7 @@
                 <a href="{{ recipe.url }}">Go to recipe</a>
             </td>
             <td>
-                <a ui-sref="recipes.morelikethis({ id: recipe.id, pageSize: model.searchData.pageSize })">More like this</a>
+                <a ui-sref="recipes.morelikethis({ id: recipe.id, pageSize: model.searchData.pageSize, recipe: recipe.name })">More like this</a>
             </td>
         </tr>
     </table>
