--- a/src/ElasticsearchRecipes/wwwroot/Views/MoreLikeThis.html
+++ b/src/ElasticsearchRecipes/wwwroot/Views/MoreLikeThis.html
@@ -3,7 +3,7 @@
         Took: {{ model.searchData.elapsedMilliseconds }}ms, Page: {{ model.searchData.page }}, Results count: {{ model.searchData.total }}
     </div>
 
-    <h3>Recipes like {{ model.currentRecipeId }}</h3>
+    <h3>Recipes like "{{ model.currentRecipe }}"</h3>
 
     <table class="table table-bordered">
         <thead>
@@ -27,7 +27,7 @@
                 <a href="{{ recipe.url }}">Go to recipe</a>
             </td>
             <td>
-                <a ui-sref="recipes.morelikethis({ id: recipe.id, pageSize: model.searchData.pageSize })">More like this</a>
+                <a ui-sref="recipes.morelikethis({ id: recipe.id, pageSize: model.searchData.pageSize, recipe: recipe.name })">More like this</a>
             </td>
         </tr>
     </table>
