--- a/src/ElasticsearchRecipes/wwwroot/Views/MoreLikeThis.html
+++ b/src/ElasticsearchRecipes/wwwroot/Views/MoreLikeThis.html
@@ -3,7 +3,7 @@
         Took: {{ model.searchData.elapsedMilliseconds }}ms, Page: {{ model.searchData.page }}, Results count: {{ model.searchData.total }}
     </div>
 
-    <h3>Recipes like "{{ model.currentRecipe }}"</h3>
+    <h3>Recipes like "{{ model.currentRecipeName }}"</h3>
 
     <table class="table table-bordered">
         <thead>
